css/drybjed.css
html {
  font-size: 17px;
  font-family: "Droid Sans Condensed", sans-serif;
}

@media (max-width: 900px) {
  html { font-size: 15px; }
}

@media (max-width: 400px) {
  html { font-size: 13px; }
}

@media not grid {
  body {
    background-color: #f9f9f9;
  }
}

#content {
  margin: 0 auto;
  width: 600px;
  padding: 2rem;
}

@media (max-width: 1000px) {
  #content {
    margin-left: 3em;
  }
}

@media (max-width: 900px) {
  #content {
    width: 70%;
    padding: 1.5rem;
  }
}

h1 {
  padding-bottom: 0.05em;
  border-bottom: 2px solid #0092DF;
  font-size: 150%;
}

h2 {
  font-size: 120%;
}

a {
  text-decoration: none;
  color: #0e82bf;
}

a:hover {
  text-decoration: underline;
}

code {
  font-family: "Inconsolata", monospace;
  color: #777;
}

@media not grid {
  code {
    font-family: "Inconsolata", monospace;
    color: #333;
  }
}

pre {
  color: #777;
  padding-left: 4em;
}

@media not grid {
  pre {
    font-family: "Inconsolata", monospace;
    font-size: 90%;
    color: #333;
    padding-left: 0rem;
  }
}

@media (max-width: 500px) {
  pre { padding-left: 0rem; }
}

dd {
  margin-bottom: 0.5em;
}

#avatar {
  object-fit: cover;
  border-radius:50%;
  width: 80px;
  height: 80px;
  float: right;
  padding-left: 0.2em;
  padding-bottom: 0.4em;
  margin-right: 1em;
}

